--- a/index.html
+++ b/index.html
@@ -107,5 +107,5 @@
         </main>
     </div>
 </body>
-
+<script src="https://code.responsivevoice.org/responsivevoice.js?key=J0qJKT2M"></script>
 </html>
