--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
             </articte>
         </main>
     </div>
+    
+ 
+ <script src="https://code.responsivevoice.org/responsivevoice.js?key=J0qJKT2M"></script>
+<script>
+setTimeout(responsiveVoice.speak("Конспект по первому блоку номер 1"),15000);
+</script>
+    
 </body>
-<script src="https://code.responsivevoice.org/responsivevoice.js?key=J0qJKT2M"></script>
+
 </html>
