--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script>
         hljs.initHighlightingOnLoad();
     </script>
+     <script src="https://code.responsivevoice.org/responsivevoice.js?key=J0qJKT2M" defer></script>
 </head>
 
 <body>
@@ -108,8 +109,8 @@
     </div>
     
  
- <script src="https://code.responsivevoice.org/responsivevoice.js?key=J0qJKT2M"></script>
-<script>
+
+<script defer>
 setTimeout(responsiveVoice.speak("Конспект по первому блоку номер 1"),15000);
 </script>
     
