--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
     </div>
     
  
-
+<script src="https://code.responsivevoice.org/responsivevoice.js?key=J0qJKT2M" defer></script>
 <script defer>
 setTimeout(responsiveVoice.speak("Конспект по первому блоку номер 1"),100);
 </script>
-    
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=J0qJKT2M" defer></script>
 </body>
 
 </html>
