--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 />
  
 <script>
+      responsiveVoice.speak('еуаапп','Russian male');
         //Populate voice selection dropdown
         var voicelist = responsiveVoice.getVoices();
         var vselect = $("#voiceselection");
