--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         var vselect = $("#voiceselection");
         $.each(voicelist, function() {
                 vselect.append($("<option />").val(this.name).text(this.name));
-            console.log(this.name);
+          //  console.log(this.name);
         });
 </script>
  
